--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Creative - Start Bootstrap Theme</title>
+    <title>Makulia</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -43,7 +43,7 @@
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand page-scroll" href="#page-top">Makulia</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -71,10 +71,10 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Your Favorite Source of Free Bootstrap Themes</h1>
+                <h1 id="homeHeading">Makulia</h1>
                 <hr>
-                <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
-                <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+                <p>Italialaisia makuja lautasellesi</p>
+                <a href="#about" class="btn btn-primary btn-xl page-scroll">Tutustu</a>
             </div>
         </div>
     </header>
@@ -83,10 +83,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">We've got what you need!</h2>
+                    <h2 class="section-heading">Hei, makujen ystävä!</h2>
                     <hr class="light">
-                    <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
+                    <p class="text-faded">Sinun <i>täytyy</i> kokea Etelä-Italian puhdas makumaailma. Yksinkertaisimmatkin ruoat vievät kielen mennessään Välimeren värikkään elämän, jyrkillä vuorilla vaeltavan karjan sekä auringon syleilemien kasvisten ansiosta. Italialaisten makujen salaisuus piilee ensiluokkaisissa puhtaissa raaka-aineissa sekä rakkaudessa ruokaan.</p>
+                    <!--
                     <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
+                    -->
                 </div>
             </div>
         </div>
@@ -96,7 +98,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">At Your Service</h2>
+                    <h2 class="section-heading">Italialaisen pastan salaisuus</h2>
                     <hr class="primary">
                 </div>
             </div>
@@ -106,22 +108,22 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
-                        <h3>Sturdy Templates</h3>
-                        <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+                        <h3>Isompi kattila</h3>
+                        <p class="text-muted">Keitä pasta isossa kattilassa runsaassa vedessä ja lisää <i>paljon</i> suolaa.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
-                        <h3>Ready to Ship</h3>
-                        <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+                        <h3>"Odori" - tuoreena</h3>
+                        <p class="text-muted">Valkosipuli toimii herkullisen kastikkeen pohjana ja reilu kimppu tuoreita yrttejä värittää pastan sesongin mukaan.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
-                        <h3>Up to Date</h3>
-                        <p class="text-muted">We update dependencies to keep things fresh.</p>
+                        <h3>Salainen mauste</h3>
+                        <p class="text-muted">Vaihtelevan maaston johdosta Italia on täynnä alueellisia erikoisuuksia, jotka antavat ruoalle sen originellin maun.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
