--- a/index.html
+++ b/index.html
@@ -131,6 +131,20 @@
                 </div>
                 </div>
             </div>
+
+            
+        </div>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+
+                    <hr class="primary">
+                <div class="col-lg-12 col-md-12 text-center">
+                    <a href="#about" class="btn btn-primary btn-xl page-scroll">Tutustu</a>
+                </div>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -230,7 +244,7 @@
             </div>
         </div>
     </section>
-
+<!--
     <aside class="bg-dark">
         <div class="container text-center">
             <div class="call-to-action">
@@ -239,7 +253,7 @@
             </div>
         </div>
     </aside>
-
+-->
     <section id="contact">
         <div class="container">
             <div class="row">
