--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Makulia</h1>
+                <h1 id="homeHeading">Italialaisia makuja lautasellesi</h1>
                 <hr>
-                <p>Italialaisia makuja lautasellesi</p>
+                <p>Sinun <i>täytyy</i> kokea Etelä-Italian puhdas makumaailma. Yksinkertaisimmatkin ruoat vievät kielen mennessään Välimeren värikkään elämän, jyrkillä vuorilla vaeltavan karjan sekä auringon syleilemien kasvisten ansiosta. Italialaisten makujen salaisuus piilee ensiluokkaisissa puhtaissa raaka-aineissa sekä rakkaudessa ruokaan.</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Tutustu</a>
             </div>
         </div>
@@ -85,12 +85,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Hei, makujen ystävä!</h2>
+                    <h2 class="section-heading">Huolella valikoidut laatuherkut kotiisi</h2>
                     <hr class="light">
-                    <p class="text-faded">Sinun <i>täytyy</i> kokea Etelä-Italian puhdas makumaailma. Yksinkertaisimmatkin ruoat vievät kielen mennessään Välimeren värikkään elämän, jyrkillä vuorilla vaeltavan karjan sekä auringon syleilemien kasvisten ansiosta. Italialaisten makujen salaisuus piilee ensiluokkaisissa puhtaissa raaka-aineissa sekä rakkaudessa ruokaan.</p>
-                    <!--
-                    <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
-                    -->
+                    <p class="text-faded">Matkustaessamme ympäri eteläisessä Italiaa, löysimme maailman, jossa tuoretta vuohenmaitojuustoa jaa vain kesällä. Siellä ruokien säilöntäaineina toimivat oliiviöljy tai merisuola ja appelsiinin kuori on niin puhdas, että sitä voi huoletta syödä. Kokoamme sesongin parhaat tuotteet herkullisine resepteineen Makupakettiin, jonka toimitamme suoraan kotiovellesi.</p>
+                    <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Haluan odotuslistalle!</a>
                 </div>
             </div>
         </div>
