--- a/index.html
+++ b/index.html
@@ -88,11 +88,13 @@
                     <h2 class="section-heading">Huolella valikoidut laatuherkut kotiisi</h2>
                     <hr class="light">
                     <p class="text-faded">Matkustaessamme ympäri eteläisessä Italiaa, löysimme maailman, jossa tuoretta vuohenmaitojuustoa jaa vain kesällä. Siellä ruokien säilöntäaineina toimivat oliiviöljy tai merisuola ja appelsiinin kuori on niin puhdas, että sitä voi huoletta syödä. Kokoamme sesongin parhaat tuotteet herkullisine resepteineen Makupakettiin, jonka toimitamme suoraan kotiovellesi.</p>
-                    <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Haluan odotuslistalle!</a>
+                    <a href="http://eepurl.com/cYXjtf" target="_blank" class="page-scroll btn btn-default btn-xl sr-button">Haluan odotuslistalle!</a>
                 </div>
             </div>
         </div>
     </section>
+
+
 
     <section id="services">
         <div class="container">
@@ -271,6 +273,7 @@
 
     <!-- Theme JavaScript -->
     <script src="js/creative.min.js"></script>
+
 
 </body>
 
