links and buttons working

--- a/index.html
+++ b/index.html
@@ -52,16 +52,13 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#makupaketti">Makupaketti</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Services</a>
+                        <a class="page-scroll" href="#salaisuus">Salaisuus</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Portfolio</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#ota-yhteytta">Ota yhteyttä</a>
                     </li>
                 </ul>
             </div>
@@ -76,12 +73,14 @@
                 <h1 id="homeHeading">Italialaisia makuja lautasellesi</h1>
                 <hr>
                 <p>Sinun <i>täytyy</i> kokea Etelä-Italian puhdas makumaailma. Yksinkertaisimmatkin ruoat vievät kielen mennessään Välimeren värikkään elämän, jyrkillä vuorilla vaeltavan karjan sekä auringon syleilemien kasvisten ansiosta. Italialaisten makujen salaisuus piilee ensiluokkaisissa puhtaissa raaka-aineissa sekä rakkaudessa ruokaan.</p>
-                <a href="#about" class="btn btn-primary btn-xl page-scroll">Tutustu</a>
+                <a href="#makupaketti" class="btn btn-xl btn-primary-outline page-scroll">
+                    <i class="fa fa-3x fa-chevron-down" aria-hidden="true"></i>
+                </a>
             </div>
         </div>
     </header>
 
-    <section class="bg-primary" id="about">
+    <section class="bg-primary" id="makupaketti">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
@@ -94,7 +93,7 @@
         </div>
     </section>
 
-    <section id="services">
+    <section id="salaisuus">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -252,7 +251,7 @@
         </div>
     </aside>
 -->
-    <section id="contact">
+    <section id="ota-yhteytta">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
