modified text and button

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
                         <span class="fa fa-4x text-primary icon-kettle-icon sr-icons"></span>
                         <h3>Isompi kattila</h3>
-                        <p class="text-muted">Keitä pasta isossa kattilassa runsaassa vedessä ja lisää <i>paljon</i> suolaa.</p>
+                        <p class="text-muted">Keitä pasta isossa kattilassa runsaassa vedessä, johon on lisätty <i>paljon</i> suolaa.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center">
@@ -138,7 +138,7 @@
 
                     <hr class="primary">
                 <div class="col-lg-12 col-md-12 text-center">
-                    <a href="#about" class="btn btn-primary btn-xl page-scroll">Tutustu</a>
+                    <a href="#about" class="btn btn-primary btn-xl page-scroll">Kokkaa nopea ja herkullinen pasta!</a>
                 </div>
                 </div>
             </div>
