added footer, changed title, changed some texts and typos

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Italialaisia makuja lautasellesi</h1>
+                <h1 id="homeHeading">Makujen Italia</h1>
                 <hr>
-                <p>Sinun <i>täytyy</i> kokea Etelä-Italian puhdas makumaailma. Yksinkertaisimmatkin ruoat vievät kielen mennessään Välimeren värikkään elämän, jyrkillä vuorilla vaeltavan karjan sekä auringon syleilemien kasvisten ansiosta. Italialaisten makujen salaisuus piilee ensiluokkaisissa puhtaissa raaka-aineissa sekä rakkaudessa ruokaan.</p>
+                <p>Yksinkertaisimmatkin ruoat vievät kielen mennessään Välimeren värikkään elämän, jyrkillä vuorilla vaeltavan karjan sekä auringon syleilemien kasvisten ansiosta. Italialaisten makujen salaisuus piilee ensiluokkaisissa puhtaissa raaka-aineissa sekä rakkaudessa ruokaan.</p>
                 <a href="#makupaketti" class="btn btn-xl btn-primary-outline page-scroll">
                     <i class="fa fa-3x fa-chevron-down" aria-hidden="true"></i>
                 </a>
@@ -86,7 +86,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Huolella valikoidut laatuherkut kotiisi</h2>
                     <hr class="light">
-                    <p class="text-faded">Matkustaessamme ympäri eteläisessä Italiaa, löysimme maailman, jossa tuoretta vuohenmaitojuustoa jaa vain kesällä. Siellä ruokien säilöntäaineina toimivat oliiviöljy tai merisuola ja appelsiinin kuori on niin puhdas, että sitä voi huoletta syödä. Kokoamme sesongin parhaat tuotteet herkullisine resepteineen Makupakettiin, jonka toimitamme suoraan kotiovellesi.</p>
+                    <p class="text-faded">Matkustaessamme ympäri eteläistä Italiaa, löysimme maailman, jossa ruokien säilöntäaineina toimivat oliiviöljy tai suola. Sieltä saa kesäisin tuoretta vuohenmaitojuustoa ja appelsiinin kuori on niin puhdas, että sitä voi huoletta syödä. Kokoamme sesongin parhaat tuotteet herkullisine resepteineen Makupakettiin, jonka toimitamme suoraan kotiovellesi.</p>
                     <a href="http://eepurl.com/cYXjtf" target="_blank" class="page-scroll btn btn-default btn-xl sr-button">Haluan odotuslistalle!</a>
                 </div>
             </div>
@@ -132,107 +132,108 @@
             
         </div>
 
-        <div class="container">
+        <!-- <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
 
                     <hr class="primary">
+
                 <div class="col-lg-12 col-md-12 text-center">
                     <a href="#about" class="btn btn-primary btn-xl page-scroll">Kokkaa nopea ja herkullinen pasta!</a>
                 </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </section>
 
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/1.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/1.jpg" class="img-responsive" alt="">
+                    <a href="img/portfolio/fullsize/cilento.jpg" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/cilento.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Cilento
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Regione Campania, Italia
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/2.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/2.jpg" class="img-responsive" alt="">
+                    <a href="img/portfolio/fullsize/birds.jpg" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/birds.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Cilento
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Maanviljelyä kansallispuistossa
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/3.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/3.jpg" class="img-responsive" alt="">
+                    <a href="img/portfolio/fullsize/capicollo.jpg" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/capicollo.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Cilento
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Capicollo, porsaan niska
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/4.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/4.jpg" class="img-responsive" alt="">
+                    <a href="img/portfolio/fullsize/carciofini.jpg" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/carciofini.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Cilento
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Carciofini - artisokan sydämiä
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/5.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/5.jpg" class="img-responsive" alt="">
+                    <a href="img/portfolio/fullsize/alicisale.jpg" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/alicisale.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Cilento
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Alici sotto sale - suolattuja sardelleja
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/6.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/6.jpg" class="img-responsive" alt="">
+                    <a href="img/portfolio/fullsize/carciofo.jpg" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/carciofo.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Cilento
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Carciofo di Paestum - Paestumin artisokka
                                 </div>
                             </div>
                         </div>
@@ -255,21 +256,36 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Let's Get In Touch!</h2>
+                    <h2 class="section-heading">Ota yhteyttä</h2>
                     <hr class="primary">
-                    <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                    <p>Makulia myy ja tuo maahan valikoituja ensiluokkaisia italialaisia elintarvikkeita. Makulian perustaja Pinja Juvonen valitsee tuotteet henkilökohtaisesti ihmisen kokoisilta tuottajilta eteläisestä Italiasta. Valmistajat ovat perheyrityksiä tai pienehköjä firmoja, joiden tuotteilla on juuret syvällä paikallisissa perinteissä.</p>
+                    <p>Heräsikö kysyttävää? Kiinostuitko Makupaketista? Kysy pois, vastaamme mielellämme!</p>
                 </div>
+                <!--
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
                     <p>123-456-6789</p>
                 </div>
-                <div class="col-lg-4 text-center">
-                    <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                    <p><a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a></p>
-                </div>
+                -->
             </div>
         </div>
     </section>
+
+    <hr>
+
+        <div class="footer">
+            <div class="container">
+                <div class="text-center">
+                    <p>Copyright ©Makulia 2017</p>
+                </div>
+                <div class="text-center">
+                    <p class="text-muted small">
+                    <a href="http://www.freepik.com" class="text-muted">Header photo by Valeria_Aksakova, Freepik / Garlic icon by Frimufilms, Freepik / Other hand-drawn icons by Freepik</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+
 
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
