various css improvements and some typos

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
+                    <span class="sr-only">Toggle navigation</span> Valikko <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">Makulia</a>
             </div>
@@ -259,7 +259,7 @@
                     <h2 class="section-heading">Ota yhteyttä</h2>
                     <hr class="primary">
                     <p>Makulia myy ja tuo maahan valikoituja ensiluokkaisia italialaisia elintarvikkeita. Makulian perustaja Pinja Juvonen valitsee tuotteet henkilökohtaisesti ihmisen kokoisilta tuottajilta eteläisestä Italiasta. Valmistajat ovat perheyrityksiä tai pienehköjä firmoja, joiden tuotteilla on juuret syvällä paikallisissa perinteissä.</p>
-                    <p>Heräsikö kysyttävää? Kiinostuitko Makupaketista? Kysy pois, vastaamme mielellämme!</p>
+                    <p>Heräsikö kysyttävää? Kiinnostuitko Makupaketista? Kysy pois, vastaamme mielellämme!</p>
                 </div>
                 <!--
                 <div class="col-lg-4 col-lg-offset-2 text-center">
