better foto description

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                                     Cilento
                                 </div>
                                 <div class="project-name">
-                                    Regione Campania, Italia
+                                    Golfo di Policastro, Salerno
                                 </div>
                             </div>
                         </div>
