--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -259,7 +259,7 @@
                     <h2 class="section-heading">Ota yhteyttä</h2>
                     <hr class="primary">
                     <p>Makulia myy ja tuo maahan valikoituja ensiluokkaisia italialaisia elintarvikkeita. Makulian perustaja Pinja Juvonen valitsee tuotteet henkilökohtaisesti ihmisen kokoisilta tuottajilta eteläisestä Italiasta. Valmistajat ovat perheyrityksiä tai pienehköjä firmoja, joiden tuotteilla on juuret syvällä paikallisissa perinteissä.</p>
-                    <p>Heräsikö kysyttävää? Kiinnostuitko Makupaketista? Kysy pois, vastaamme mielellämme!</p>
+                    <p>Heräsikö kysyttävää? Kiinnostuitko Makupaketista? <a href="javascript:void(Tawk_API.toggle())">Chattaa meille tästä</a>, vastaamme mielellämme!</p>
                 </div>
                 <!--
                 <div class="col-lg-4 col-lg-offset-2 text-center">
@@ -300,8 +300,19 @@
 
     <!-- Theme JavaScript -->
     <script src="js/creative.min.js"></script>
-
-
+    <!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/598a36a4dbb01a218b4db67b/default';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
 </body>
 
 </html>
