alici campaign button

--- a/index.html
+++ b/index.html
@@ -132,18 +132,18 @@
             
         </div>
 
-        <!-- <div class="container">
+        <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
 
                     <hr class="primary">
 
                 <div class="col-lg-12 col-md-12 text-center">
-                    <a href="#about" class="btn btn-primary btn-xl page-scroll">Kokkaa nopea ja herkullinen pasta!</a>
+                    <a href="http://eepurl.com/cZoLz5" target="_blank" class="btn btn-primary btn-xl page-scroll">Opi valmistamaan herkullista pastaa!</a>
                 </div>
                 </div>
             </div>
-        </div> -->
+        </div>
     </section>
 
     <section class="no-padding" id="portfolio">
