--- a/index.html
+++ b/index.html
@@ -134,11 +134,11 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-lg-4 col-md-6 text-center">
+                <div class="col-lg-12 col-md-1 col-sm-12 text-center">
 
                     <hr class="primary">
 
-                <div class="col-lg-4 col-md-6 text-center">
+                <div class="col-lg-12 col-md-1 col-sm-12 text-center">
                     <a href="http://eepurl.com/cZoLz5" target="_blank" class="btn btn-primary btn-xl page-scroll">Opi valmistamaan herkullista pastaa!</a>
                 </div>
                 </div>
