--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     <hr class="primary">
 
                 <div class="col-lg-12 col-md-1 col-sm-12 text-center">
-                    <a href="http://eepurl.com/cZoLz5" target="_blank" class="btn btn-primary btn-xl page-scroll">Opi valmistamaan herkullista pastaa!</a>
+                    <a href="http://eepurl.com/cZoLz5" target="_blank" class="btn btn-primary btn-xl page-scroll" style="white-space:normal !important; word-wrap: break-word;">Opi valmistamaan herkullista pastaa!</a>
                 </div>
                 </div>
             </div>
