--- a/index.html
+++ b/index.html
@@ -134,12 +134,12 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 col-md-1 col-sm-12 text-center">
+                <div class="col-lg-12 col-md-12 col-sm-12 text-center">
 
                     <hr class="primary">
 
-                <div class="col-lg-12 col-md-1 col-sm-12 text-center">
-                    <a href="http://eepurl.com/cZoLz5" target="_blank" class="btn btn-primary btn-xl page-scroll" style="white-space:normal !important; word-wrap: break-word;">Opi valmistamaan herkullista pastaa!</a>
+                <div class="col-lg-12 col-md-12 col-sm-12 text-center">
+                    <a href="http://eepurl.com/cZoLz5" target="_blank" class="btn btn-primary btn-xl page-scroll" style="white-space:normal !important; word-wrap: break-word; word-break: normal">Opi valmistamaan herkullista pastaa!</a>
                 </div>
                 </div>
             </div>
