whole makupaketti page, imgs, changes in texts everywhere, paypal added to buy button

--- a/makupaketti.html
+++ b/makupaketti.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Makulia</title>
+    <title>Makupaketti - Makulia</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -45,17 +45,17 @@
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Valikko <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Makulia</a>
+                <a class="navbar-brand" href="/">Makulia</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="/makupaketti">Makupaketti</a>
+                        <a class="page-scroll" href="#makupaketti">Makupaketti</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#salaisuus">Salaisuus</a>
+                        <a class="page-scroll" href="#uutiset">Uutiset</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#ota-yhteytta">Ota yhteyttä</a>
@@ -67,12 +67,14 @@
         <!-- /.container-fluid -->
     </nav>
 
-    <header class="home">
+    <header class="makupaketti">
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Makujen Italia</h1>
+                <h1 id="homeHeading">Makupaketti</h1>
                 <hr>
-                <p>Yksinkertaisimmatkin ruoat vievät kielen mennessään Välimeren värikkään elämän, jyrkillä vuorilla vaeltavan karjan sekä auringon syleilemien kasvisten ansiosta. Italialaisten makujen salaisuus piilee ensiluokkaisissa puhtaissa raaka-aineissa sekä rakkaudessa ruokaan.</p>
+                <p>Ihastu hedelmällisen Campanian rikkaaseen ruokakulttuuriin! Kokoamme eteläisen Italian täyteläisiä makuja resepteineen Makupakettiin, jonka herkut vaihtuvat aina sesongin mukaan.</p>
+                <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=9KVHM4KYXFKG2" target="_blank" class="page-scroll btn btn-default btn-xl sr-button">Tilaa lokakuun Makupaketti</a>
+                <br>
                 <a href="#makupaketti" class="btn btn-xl btn-primary-outline page-scroll">
                     <i class="fa fa-3x fa-chevron-down" aria-hidden="true"></i>
                 </a>
@@ -80,59 +82,110 @@
         </div>
     </header>
 
+<!--
+
+-->
+<!--
     <section class="bg-primary" id="makupaketti">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Huolella valikoidut laatuherkut kotiisi</h2>
+                    <h2 class="section-heading">Makupaketti</h2>
                     <hr class="light">
-                    <p class="text-faded">Matkatessamme ympäri eteläistä Italiaa ihastuimme aurinkoisen Campanian makuihin ja elämään. Mahdottoman punaiset tomaatit ja tajunnanräjäyttävät appelsiinit kasvavat runsaina Vesuviuksen hedelmällisessä ympäristössä, kun taas laiduntavat puhvelit jakavat Campanian tasangot muinaisten temppelien kanssa.</p>
-                    <p class="text-faded">Kokoamme sesongin parhaat tuotteet herkullisine resepteineen Makupakettiin, jonka toimitamme suoraan kotiovellesi.</p>
-                    <a href="/makupaketti" target="_blank" class="btn btn-default btn-xl sr-button">Makupaketti</a>
+                    <p class="text-faded">Koe Molempain Sisiliain kuningaskunnan rikas ruokakulttuuri. Kokoamme eteläisen Italian täyteläisiä makuja sesongin mukaan vaihtuvaan Makupakettiin.</p>
+                    <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=9KVHM4KYXFKG2" target="_blank" class="page-scroll btn btn-default btn-xl sr-button">Tilaa lokakuun Makupaketti</a>
                 </div>
             </div>
         </div>
     </section>
-
-    <section id="salaisuus">
+-->
+    <section id="makupaketti">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Italialaisen pastan salaisuus</h2>
+                    <h2 class="section-heading">Campanian syksy</h2>
                     <hr class="primary">
+                    <p>Tämä paketti tarjoaa pirskahtelevan tummia makuja loppukesän lämmöllä höystettynä.</p>
                 </div>
             </div>
         </div>
+
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
-
-                        <span class="fa fa-4x text-primary icon-kettle-icon sr-icons"></span>
-                        <h3>Isompi kattila</h3>
-                        <p class="text-muted">Keitä pasta isossa kattilassa runsaassa vedessä, johon on lisätty <i>paljon</i> suolaa.</p>
+                        <img src="img/products/cacioricotta2.jpg" class="img-responsive" alt="Cacioricotta - italialainen vuohenmaitojuusto">
+                        <h3>Cacioricotta</h3>
+                        <p class="text-muted">Kevyesti kypsytetty vuohenmaitojuusto</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
-                        <span class="fa fa-4x icon-garlic-icon text-primary sr-icons"></span>
-                        <h3>"Odori" - tuoreena</h3>
-                        <p class="text-muted">Valkosipuli toimii herkullisen kastikkeen pohjana ja reilu kimppu tuoreita yrttejä värittää pastan sesongin mukaan.</p>
+                        <img src="img/products/pomcorbarini-bread-jar.jpg" class="img-responsive" alt="Pomodorino Corbarino secco - Aurinkokuivattuja Corbarino-tomaatteja">
+                        <h3>Pomodorino Corbarino secco</h3>
+                        <p class="text-muted">Aurinkokuivattuja Corbarino-tomaatteja oliiviöljyssä</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
-                        <span class="fa fa-4x icon-secret-ingredient-icon text-primary sr-icons"></span>
-                        <h3>Salainen mauste</h3>
-                        <p class="text-muted">Vaihtelevan maaston johdosta Italia on täynnä alueellisia erikoisuuksia, jotka antavat ruoalle sen originellin maun.</p>
+                        <img src="img/products/soppressatadigioi.jpg" class="img-responsive" alt="Soppressata di Gioi - italialainen salamimakkara">
+                        <h3>Soppressata di Gioi</h3>
+                        <p class="text-muted">Salamimakkara - etelän vastine prosciuttolle</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 text-center">
+                    <div class="service-box">
+                        <img src="img/products/colatura.jpg" class="img-responsive" alt="Colatura di Menaica - Sardelleista puristettu kalakastike">
+                        <h3>Colatura di Menaica</h3>
+                        <p class="text-muted">Antiikin ajoista tunnettu kalakastike antamaan merellistä makua ruokiin</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 text-center">
+                    <div class="service-box">
+                        <img src="img/products/olioxtrav.jpg" class="img-responsive" alt="Kylmäpuristettu neitsytoliiviöljy">
+                        <h3>Olio extra vergine di oliva</h3>
+                        <p class="text-muted">Kylmäpuristettu neitsytoliiviöljy</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 text-center">
+                    <div class="service-box">
+                        <img src="img/products/freselle.jpg" class="img-responsive" alt="Freselle integrale - täysjyväkorppu">
+                        <h3>Freselle integrali</h3>
+                        <p class="text-muted">Puu-uunissa paistettu käsin leivottu täysjyväkorppu</p>
                     </div>
                 </div>
                 </div>
             </div>
-
-            
         </div>
 
+        <div class="container" style="padding-top: 25px">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <hr class="primary">
+                    <p>Makupaketti toimitetaan sinulle lokakuussa Helsinkiin. Valikoima vaihtuu joka toinen kuukausi. Campanian syksy -paketti on tilattavissa syyskuun ajan.</p>
+                </div>
+                <div class="col-lg-12 col-md-12 col-sm-12 text-center">
+                    <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=9KVHM4KYXFKG2" target="_blank" class="btn btn-primary btn-xl page-scroll" style="white-space:normal !important; word-wrap: break-word; word-break: normal">Tilaa Makupaketti tästä</a>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+
+    <section class="bg-primary" id="uutiset">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <h2 class="section-heading">Tulevat Makupaketit</h2>
+                    <hr class="light">
+                    <p class="text-faded">Mitä herkkuja löytyy joulukuun paketista? Miksi juuri Makupaketin tuotteet ovat maistamisen arvoisia? Saat tietää ensimmäisten joukossa, kun liityt Makupaketin Uutisten listalle.</p>
+                    <a href="http://eepurl.com/cYXjtf" target="_blank" class="btn btn-default btn-xl sr-button">Makupaketin Uutiset</a>
+                </div>
+            </div>
+        </div>
+    </section>
+<!--
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 text-center">
@@ -243,6 +296,7 @@
             </div>
         </div>
     </section>
+-->
 <!--
     <aside class="bg-dark">
         <div class="container text-center">
@@ -279,11 +333,6 @@
             <div class="container">
                 <div class="text-center">
                     <p>Copyright ©Makulia 2017</p>
-                </div>
-                <div class="text-center">
-                    <p class="text-muted small">
-                    <a href="http://www.freepik.com" class="text-muted">Header photo by Valeria_Aksakova, Freepik / Garlic icon by Frimufilms, Freepik / Other hand-drawn icons by Freepik</a>
-                    </p>
                 </div>
             </div>
         </div>
