changed the Makulian Uutiset text in makupakett page

--- a/makupaketti.html
+++ b/makupaketti.html
@@ -177,10 +177,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Tulevat Makupaketit</h2>
+                    <h2 class="section-heading">Makulian Uutiset</h2>
                     <hr class="light">
-                    <p class="text-faded">Mitä herkkuja löytyy joulukuun paketista? Miksi juuri Makupaketin tuotteet ovat maistamisen arvoisia? Saat tietää ensimmäisten joukossa, kun liityt Makupaketin Uutisten listalle.</p>
-                    <a href="http://eepurl.com/cYXjtf" target="_blank" class="btn btn-default btn-xl sr-button">Makupaketin Uutiset</a>
+                    <p class="text-faded">Saat herkullisia reseptejä ja vinkkejä italialaiseen ruoanlaittoon sekä pääsyn kutsuvierastapahtumiimme, kun liityt postituslistallemme. Lisäksi saat ensimmäisten joukossa tiedon tulevien makupakettien sisällöstä ja tuotteista, joita on saatavilla rajoitetusti.</p>
+                    <a href="http://eepurl.com/cYXjtf" target="_blank" class="btn btn-default btn-xl sr-button">Liity</a>
                 </div>
             </div>
         </div>
