event subscription button changed to makulian uutiset button

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     <hr class="primary">
 
                 <div class="col-lg-12 col-md-12 col-sm-12 text-center">
-                    <a href="http://eepurl.com/cZoLz5" target="_blank" class="btn btn-primary btn-xl page-scroll" style="white-space:normal !important; word-wrap: break-word; word-break: normal">Opi valmistamaan herkullista pastaa!</a>
+                    <a href="http://eepurl.com/cYXjtf" target="_blank" class="btn btn-primary btn-xl page-scroll" style="white-space:normal !important; word-wrap: break-word; word-break: normal">Lisää vinkkejä</a>
                 </div>
                 </div>
             </div>
