changed the portfolio imgs to Pinja's own photos and cleaned other photos from img folder

--- a/index.html
+++ b/index.html
@@ -166,75 +166,75 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/birds.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/birds.jpg" class="img-responsive" alt="">
+                    <a href="img/portfolio/fullsize/maiali-gioi.jpg" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/maiali-gioi.jpg" class="img-responsive" alt="Gioin siat metsässä">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
                                     Cilento
                                 </div>
                                 <div class="project-name">
-                                    Maanviljelyä kansallispuistossa
+                                    Sikojen koti Gioissa
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/capicollo.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/capicollo.jpg" class="img-responsive" alt="">
+                    <a href="img/portfolio/fullsize/cala-bianca.jpg" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/cala-bianca.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
                                     Cilento
                                 </div>
                                 <div class="project-name">
-                                    Capicollo, porsaan niska
+                                    Cala Bianca - Valkoinen ranta
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/carciofini.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/carciofini.jpg" class="img-responsive" alt="">
+                    <a href="img/portfolio/fullsize/mulino.jpg" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/mulino.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
                                     Cilento
                                 </div>
                                 <div class="project-name">
-                                    Carciofini - artisokan sydämiä
+                                    Morigeratin vanha mylly
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/alicisale.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/alicisale.jpg" class="img-responsive" alt="">
+                    <a href="img/portfolio/fullsize/buffalo.jpg" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/buffalo.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
                                     Cilento
                                 </div>
                                 <div class="project-name">
-                                    Alici sotto sale - suolattuja sardelleja
+                                    Nuori puhveli Paestumissa
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/carciofo.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/carciofo.jpg" class="img-responsive" alt="">
+                    <a href="img/portfolio/fullsize/fiume-morigerati.jpg" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/fiume-morigerati.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
                                     Cilento
                                 </div>
                                 <div class="project-name">
-                                    Carciofo di Paestum - Paestumin artisokka
+                                    Morigeratin joki
                                 </div>
                             </div>
                         </div>
