--- a/makupaketti.html
+++ b/makupaketti.html
@@ -52,6 +52,9 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
+                        <a href="/">Etusivu</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#makupaketti">Makupaketti</a>
                     </li>
                     <li>
